Update to GraphSAGE_Rewire: Concat Pooling

--- a/MUTAG_GraphSAGE.ipynb
+++ b/MUTAG_GraphSAGE.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/AmazingK2k3/Over_Squashing_GNNs/blob/main/MUTAG_GraphSAGE.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "nieekaNMRE10"
       },
@@ -110,8 +110,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "z18_nz0wFAZ_"
+      },
       "outputs": [],
       "source": [
         "import torch\n",
@@ -162,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -201,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -226,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "DG6CftaiM4qP"
       },
@@ -241,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -276,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -484,7 +486,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -737,7 +739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "Pbtm_opgajqU"
       },
@@ -770,13 +772,13 @@
         "      # Create edge_index tensor directly from edge\n",
         "    edges = list(g6.edges())\n",
         "    edge_index = torch.tensor(edges, dtype=torch.long).t()\n",
-        "    \n",
+        "\n",
         "    # Make undirected by adding reverse edges\n",
         "    edge_index = torch.cat([edge_index, edge_index.flip(0)], dim=1)\n",
-        "    \n",
+        "\n",
         "    # Remove duplicate edges and sort\n",
         "    edge_index = torch.unique(edge_index, dim=1)\n",
-        "    \n",
+        "\n",
         "    # Ensure contiguous memory layout\n",
         "    edge_index = edge_index.contiguous()\n",
         "\n",
@@ -786,7 +788,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "nT4YW0E265NJ"
       },
@@ -797,9 +799,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
-        "id": "y--32QpYayil"
+        "id": "y--32QpYayil",
+        "outputId": "40340b1e-6ce1-4362-8ea6-0bddbb97bb71"
       },
       "outputs": [
         {
@@ -834,7 +837,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "iIXmRJEyunwr"
       },
@@ -884,7 +887,7 @@
         "    # function should return the edge_index\n",
         "\n",
         "    edge_index = torch.tensor(adj_matrix, dtype=torch.long)\n",
-        "    \n",
+        "\n",
         "\n",
         "    edge_index = edge_index.nonzero().t().contiguous() # (2,num_edges) format and contigous memory.\n",
         "\n",
@@ -895,7 +898,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "mNaZ1bOnvBXs"
       },
@@ -906,8 +909,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "iQK8rPe2FAaU",
+        "outputId": "739937b5-b5e5-4e1a-81ad-244cdf7b399c"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -930,8 +936,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "4dyFHALvFAaU",
+        "outputId": "d6789f89-8566-4a63-f57a-a40b81b4144c"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -959,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "kIV4d60wHrkX"
       },
@@ -1021,7 +1030,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "2tAzhYrXHx4x"
       },
@@ -1036,8 +1045,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "eY98M5zMFAaX",
+        "outputId": "2655828d-2363-48d2-cc5f-017bb6f50e0e"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -1069,17 +1081,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "XgVNnk5QFAaY"
+      },
       "outputs": [],
       "source": [
-        "# GraphSage_simple model for mutag dataset - test \n",
+        "# GraphSage_simple model for mutag dataset - test\n",
         "class GraphSage_simple(torch.nn.Module):\n",
         "    def __init__(self, in_channels, hidden_channels, out_channels, num_layers):\n",
         "        super(GraphSage_simple, self).__init__()\n",
-        "        self.num_layers = num_layers \n",
-        "        self.convs = torch.nn.ModuleList() \n",
-        "        self.convs.append(SAGEConv(in_channels, hidden_channels)) \n",
+        "        self.num_layers = num_layers\n",
+        "        self.convs = torch.nn.ModuleList()\n",
+        "        self.convs.append(SAGEConv(in_channels, hidden_channels))\n",
         "        for _ in range(num_layers - 2):\n",
         "            self.convs.append(SAGEConv(hidden_channels, hidden_channels))\n",
         "        self.convs.append(SAGEConv(hidden_channels, out_channels))\n",
@@ -1097,7 +1111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "i36bbEnWREid"
       },
@@ -1160,7 +1174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "hUM-UL_cGYpi"
       },
@@ -1216,8 +1230,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "B60nYYHvFAaZ",
+        "outputId": "fe0341d8-7201-44a9-86f0-bd481393b718"
+      },
       "outputs": [
         {
           "data": {
@@ -1244,7 +1261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "gX_tkKx7P5jG"
       },
@@ -1260,7 +1277,7 @@
         "        self.sage1 = SAGEConv(num_node_features, dim_h, aggr='mean',normalize=True) #7 * 128\n",
         "        self.sage2 = SAGEConv(dim_h, dim_h//2, aggr='mean',normalize=True) #128 * 64\n",
         "        self.sage3 = SAGEConv(dim_h//2, dim_h//4, aggr='mean',normalize=True) # 64 * 32\n",
-        "        \n",
+        "\n",
         "        self.lin = Linear((dim_h//4), 1)  # 32 * 1\n",
         "\n",
         "    def forward(self, x, edge_index, batch, rewired_edge_index):\n",
@@ -1288,6 +1305,80 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## GraphSAGE with Locally FA with Concat Pooling"
+      ],
+      "metadata": {
+        "id": "xWoou9xhFJwB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class GraphSAGE_Rewire(torch.nn.Module):\n",
+        "\n",
+        "  # CHANGE THE OUTPUT DIMENSIONS OF THE LINEAR WHEN THE DIMENSION OF THE CONCATENATED TENSOR CHANGES.\n",
+        "\n",
+        "    def __init__(self, dim_h):\n",
+        "        super().__init__()\n",
+        "        self.batch_norm1 = BatchNorm1d(dim_h)\n",
+        "        self.batch_norm2 = BatchNorm1d(dim_h//2)\n",
+        "        self.batch_norm3 = BatchNorm1d(dim_h//4)\n",
+        "\n",
+        "        self.sage1 = SAGEConv(num_node_features, dim_h, aggr='mean',normalize=True) #7 * 128\n",
+        "        self.sage2 = SAGEConv(dim_h, dim_h//2, aggr='mean',normalize=True) #128 * 64\n",
+        "        self.sage3 = SAGEConv(dim_h//2, dim_h//4, aggr='mean',normalize=True) # 64 * 32\n",
+        "\n",
+        "        self.lin = Linear(2*(dim_h//4+dim_h//2+dim_h), 1)  # 32 * 1\n",
+        "\n",
+        "    def forward(self, x, edge_index, batch, rewired_edge_index):\n",
+        "\n",
+        "        h1 = self.sage1(x, edge_index) #dim_h\n",
+        "        h1 = self.batch_norm1(h1)\n",
+        "        h = F.elu(h1) # 128\n",
+        "        h = F.dropout(h, p=0.5, training=self.training) # 128\n",
+        "\n",
+        "        h2 = self.sage2(h, edge_index) # dim_h/2\n",
+        "        h2 = self.batch_norm2(h2)\n",
+        "        h = F.elu(h2)\n",
+        "        h = F.dropout(h, p=0.5, training=self.training)\n",
+        "\n",
+        "        h3 = self.sage3(h,rewired_edge_index) # dim/4\n",
+        "        h3 = self.batch_norm3(h3)\n",
+        "        h = F.elu(h3)\n",
+        "\n",
+        "        a3 = global_mean_pool(h, batch) # 16\n",
+        "        a1 = global_mean_pool(h1,batch) # 64\n",
+        "        a2 = global_mean_pool(h2,batch) # 32\n",
+        "\n",
+        "\n",
+        "        # Dimension of torch cat is (16+64+32) = 112\n",
+        "\n",
+        "        s3 = global_add_pool(h,batch)\n",
+        "        s1 = global_add_pool(h1,batch)\n",
+        "        s2 = global_add_pool(h2,batch)\n",
+        "\n",
+        "        m3 = global_max_pool(h,batch)\n",
+        "        m1 = global_max_pool(h1,batch)\n",
+        "        m2 = global_max_pool(h2,batch)\n",
+        "\n",
+        "        #h =  torch.cat((a1,a2,a3), dim=1)\n",
+        "        #h = torch.cat((s1,s2,s3),dim = 1)\n",
+        "        h = torch.cat((m1,m2,m3,a1,a2,a3), dim = 1)\n",
+        "        h = F.dropout(h, p=0.5, training=self.training)\n",
+        "        x = self.lin(h) # 32 * 1\n",
+        "        return torch.sigmoid(x)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "p9R5yuOLFPN0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "nSqJ3zmkNn01"
       },
@@ -1297,7 +1388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "nZ7ylsoaAHOa"
       },
@@ -1333,7 +1424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "lv_TrHuvREgT"
       },
@@ -1388,7 +1479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "21dRhxL5REd4"
       },
@@ -1406,7 +1497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "Cy_6N8uMREa9"
       },
@@ -1420,7 +1511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "dW7klDEkREYX"
       },
@@ -1487,7 +1578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "NVhFosutZsSI"
       },
@@ -1626,7 +1717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1703,7 +1794,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1774,8 +1865,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 167,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "EhA-bEJuFAas"
+      },
       "outputs": [],
       "source": [
         "import torch\n",
@@ -1824,7 +1917,7 @@
         "        # Forward pass\n",
         "        if rewired_edge_index is not None:\n",
         "            out = model(data.x, data.edge_index, data.batch, rewired_edge_index=rewired_edge_index[batch_idx]).squeeze()\n",
-        "        else: \n",
+        "        else:\n",
         "            out = model(data.x, data.edge_index, data.batch).squeeze()\n",
         "        # Calculate loss\n",
         "        loss = criterion(out, data.y.float())\n",
@@ -1959,7 +2052,7 @@
         "        if early_stopping.early_stop:\n",
         "            print(\"Early stopping triggered\")\n",
         "            break\n",
-        "    \n",
+        "\n",
         "\n",
         "    # Load best model\n",
         "    model.load_state_dict(best_model_state)\n",
@@ -2011,9 +2104,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": null,
       "metadata": {
-        "id": "cHgqngOPAHOi"
+        "id": "cHgqngOPAHOi",
+        "outputId": "f24380eb-c85c-4597-c2ce-0747fe560f2d"
       },
       "outputs": [
         {
@@ -2197,7 +2291,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "ULDqYplHFAat"
+      },
       "outputs": [],
       "source": [
         "#import torch\n",
@@ -2412,8 +2508,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
