--- a/MUTAG_GraphSAGE.ipynb
+++ b/MUTAG_GraphSAGE.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/AmazingK2k3/Over_Squashing_GNNs/blob/main/MUTAG_GraphSAGE.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -1305,17 +1305,22 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## GraphSAGE with Locally FA with Concat Pooling"
-      ],
       "metadata": {
         "id": "xWoou9xhFJwB"
-      }
+      },
+      "source": [
+        "## GraphSAGE with Locally FA with Concat Pooling"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "p9R5yuOLFPN0"
+      },
+      "outputs": [],
       "source": [
-        "class GraphSAGE_Rewire(torch.nn.Module):\n",
+        "class GraphSAGE_Rewire_v2(torch.nn.Module):\n",
         "\n",
         "  # CHANGE THE OUTPUT DIMENSIONS OF THE LINEAR WHEN THE DIMENSION OF THE CONCATENATED TENSOR CHANGES.\n",
         "\n",
@@ -1370,12 +1375,81 @@
         "        return torch.sigmoid(x)\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "p9R5yuOLFPN0"
-      },
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class GraphSAGE_Rewire_v3(torch.nn.Module):\n",
+        "    def __init__(self, dim_h, num_layers, num_classes=1):\n",
+        "        super().__init__()\n",
+        "        self.num_layers = num_layers\n",
+        "        \n",
+        "        # Create ModuleLists to store layers\n",
+        "        self.batch_norms = nn.ModuleList()\n",
+        "        self.sage_layers = nn.ModuleList()\n",
+        "        \n",
+        "        # First layer\n",
+        "        self.batch_norms.append(BatchNorm1d(dim_h))\n",
+        "        self.sage_layers.append(SAGEConv(num_node_features, dim_h, aggr='mean', normalize=True))\n",
+        "        \n",
+        "        # Middle layers\n",
+        "        for i in range(1, num_layers):\n",
+        "            dim_out = dim_h // (2 ** i)\n",
+        "            self.batch_norms.append(BatchNorm1d(dim_out))\n",
+        "            self.sage_layers.append(SAGEConv(dim_h // (2 ** (i-1)), dim_out, \n",
+        "                                           aggr='mean', normalize=True))\n",
+        "        \n",
+        "        # Calculate the dimension of the concatenated tensor\n",
+        "        # For each layer, we'll have mean, add, and max pooling outputs\n",
+        "        total_concat_dim = 0\n",
+        "        for i in range(num_layers):\n",
+        "            layer_dim = dim_h // (2 ** i)\n",
+        "            total_concat_dim += layer_dim * 3  # multiply by 3 for mean, add, and max pooling\n",
+        "            \n",
+        "        self.lin = Linear(total_concat_dim, num_classes)\n",
+        "        \n",
+        "    def forward(self, x, edge_index, batch, rewired_edge_index):\n",
+        "        # Lists to store intermediate outputs\n",
+        "        mean_pools = []\n",
+        "        add_pools = []\n",
+        "        max_pools = []\n",
+        "        \n",
+        "        # Process through all layers except the last one using original edge_index\n",
+        "        h = x\n",
+        "        for i in range(self.num_layers - 1):\n",
+        "            h = self.sage_layers[i](h, edge_index)\n",
+        "            h = self.batch_norms[i](h)\n",
+        "            h = F.elu(h)\n",
+        "            h = F.dropout(h, p=0.5, training=self.training)\n",
+        "            \n",
+        "            # Store pooled outputs\n",
+        "            mean_pools.append(global_mean_pool(h, batch))\n",
+        "            add_pools.append(global_add_pool(h, batch))\n",
+        "            max_pools.append(global_max_pool(h, batch))\n",
+        "        \n",
+        "        # Last layer uses rewired_edge_index\n",
+        "        h = self.sage_layers[-1](h, rewired_edge_index)\n",
+        "        h = self.batch_norms[-1](h)\n",
+        "        h = F.elu(h)\n",
+        "        \n",
+        "        # Store pooled outputs for last layer\n",
+        "        mean_pools.append(global_mean_pool(h, batch))\n",
+        "        add_pools.append(global_add_pool(h, batch))\n",
+        "        max_pools.append(global_max_pool(h, batch))\n",
+        "        \n",
+        "        # Concatenate all pooled outputs\n",
+        "        h = torch.cat([*max_pools, *mean_pools, *add_pools], dim=1)\n",
+        "        h = F.dropout(h, p=0.5, training=self.training)\n",
+        "        \n",
+        "        # Final linear layer\n",
+        "        x = self.lin(h)\n",
+        "        \n",
+        "        return torch.sigmoid(x)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2508,8 +2582,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
